force-app/main/default/objects/Community_Topics__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom setting for Community Home Page Dynamic Tiles</description>
    <fields>
        <fullName>Default_Color_Code__c</fullName>
        <label>Default Color Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topic_1_Color__c</fullName>
        <label>Topic 1 Color</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topic_2_Color__c</fullName>
        <label>Topic 2 Color</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topic_3_Color__c</fullName>
        <label>Topic 3 Color</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topic_Field_API__c</fullName>
        <label>Topic Field API</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>topic_1__c</fullName>
        <label>topic 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>topic_2__c</fullName>
        <label>topic 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>topic_3__c</fullName>
        <label>topic 3</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Community Topics</label>
</CustomObject>